--- a/app/sass/_navbar.scss
+++ b/app/sass/_navbar.scss
@@ -7,6 +7,7 @@
   width: 100%;
   padding-right: 20px;
   z-index: 20;
+  box-shadow: 0px 0px 10px black;
 
   .title-logo {
     display: inline;
@@ -23,6 +24,8 @@
     .title {
       display: inline;
       float: left;
+      font-family: 'Krona One';
+      text-transform: uppercase;
     }
   }
 
