--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -10,12 +10,10 @@
 {{else}}
   <div class="single-bar">
     <div class="compose">
-      <i class="fa fa-send"></i>
-      Compose Message
+      <i class="fa fa-send"></i>&nbsp;&nbsp;Compose Message
     </div>
     <div class="to-bottom">
-      <i class="fa fa-chevron-down"></i>
-      Bottom
+      <i class="fa fa-chevron-down"></i>&nbsp;&nbsp;Bottom
     </div>
   </div>
 {{/if}}
