--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -5,7 +5,8 @@
   {{else}}
     <div class="msg-instance">*</div>
   {{/if}}
-  <span class="time">{{prettyTime}}</span>
+  <span class="time from-now">{{prettyTime}}</span>
+  <span class="time absolute">{{absoluteTime}}</span>
 </div>
 <div class="content">
   <div class="sender">
