--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -9,6 +9,9 @@
     <div class="username">{{username}}</div>
     <img class="gravatar" src="{{gravatar}}">
   </div>
+  <div class="add-pane">
+    <i class="fa fa-plus"></i>&nbsp;New Pane
+  </div>
 {{else}}
   <div class="btn login">Login</div>
 {{/if}}
