--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -4,16 +4,35 @@
   margin: auto;
   box-sizing: border-box;
   border: 1px solid black;
+  border-top: none;
 
   .header{
     box-sizing: border-box;
     height: $msg-header-height;
     line-height: $msg-header-height;
     background-color: #DDD;
+    position: relative;
+
+    &:hover {
+      .time.from-now {
+        opacity: 0;
+      }
+
+      .time.absolute {
+        opacity: 1;
+      }
+    }
 
     .time {
-      float: right;
+      position: absolute;
+      right: 0;
       padding-right: 5px;
+      opacity: 1;
+      transition: opacity 0.2s 0.5s;
+
+      &.absolute {
+        opacity: 0;
+      }
     }
 
     .msg-class {
