--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,8 +41,7 @@
   background: #333;
   width: 100%;
   padding-right: 20px;
-  z-index: 20;
-  box-shadow: 0px 0px 10px black; }
+  z-index: 20; }
   .navbar .title-logo {
     display: inline;
     float: left; }
@@ -70,6 +69,10 @@
     .navbar .user-info .username {
       display: inline;
       float: right; }
+  .navbar .add-pane {
+    float: right;
+    margin-right: 25px;
+    cursor: pointer; }
   .navbar .btn {
     color: #eeeeee;
     background-color: #3178d3;
@@ -116,15 +119,26 @@
   max-width: 650px;
   margin: auto;
   box-sizing: border-box;
-  border: 1px solid black; }
+  border: 1px solid black;
+  border-top: none; }
   .message-view .header {
     box-sizing: border-box;
     height: 25px;
     line-height: 25px;
-    background-color: #DDD; }
+    background-color: #DDD;
+    position: relative; }
+    .message-view .header:hover .time.from-now {
+      opacity: 0; }
+    .message-view .header:hover .time.absolute {
+      opacity: 1; }
     .message-view .header .time {
-      float: right;
-      padding-right: 5px; }
+      position: absolute;
+      right: 0;
+      padding-right: 5px;
+      opacity: 1;
+      transition: opacity 0.2s 0.5s; }
+      .message-view .header .time.absolute {
+        opacity: 0; }
     .message-view .header .msg-class {
       background-color: #BBB;
       display: inline-block;
@@ -171,7 +185,7 @@
   width: 100%;
   background-color: #555;
   color: white;
-  padding: 0px 15px 0px 10px;
+  padding: 0px 25px 0px 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-shadow: 0px 0px 1px black;
@@ -197,6 +211,37 @@
       .compose-bar .top-bar .close:hover {
         color: #ff3333; }
   .compose-bar .composer {
+    height: 200px; }
+
+.filter-bar {
+  top: 0;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background-color: #555;
+  color: white;
+  padding: 0px 25px 0px 10px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-shadow: 0px 0px 5px black;
+  z-index: 10; }
+  .filter-bar .top-bar {
+    height: 30px;
+    line-height: 30px; }
+    .filter-bar .top-bar .title {
+      float: left; }
+    .filter-bar .top-bar .filters {
+      float: right;
+      cursor: pointer;
+      margin-right: 15px; }
+    .filter-bar .top-bar .remove {
+      float: right;
+      cursor: pointer;
+      font-size: 30px;
+      margin-top: -2px; }
+      .filter-bar .top-bar .remove:hover {
+        color: #ff3333; }
+  .filter-bar .filter-editor {
     height: 200px; }
 
 html, body {
