--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -6,7 +6,7 @@
 {{#if username}}
   <div class="btn logout">Logout</div>
   <div class="user-info">
-    <div class="username">{{username}}</div>
+    <a class="username" href="settings.html">{{username}}</a>
     <img class="gravatar" src="{{gravatar}}">
   </div>
   <div class="add-pane">
