--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -23,4 +23,16 @@
       height: 60%;
     }
   }
+
+  .no-panes {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 280px;
+    font-size: 40px;
+    color: #BBB;
+  }
 }
