--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -71,7 +71,7 @@
       display: table-cell;
       vertical-align: middle;
       padding: 0 5px;
-      background-color: #DDD;
+      background-color: #EEE;
       font-size: 14px;
       position: relative;
       z-index: 2;
