--- a/app/sass/_compose.scss
+++ b/app/sass/_compose.scss
@@ -5,15 +5,15 @@
   width: 100%;
   background-color: #555;
   color: white;
-  padding: 0px 25px 0px 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-shadow: 0px 0px 1px black;
   z-index: 10;
 
   .single-bar {
-    height: 30px;
-    line-height: 30px;
+    height: $compose-filter-bar-height;
+    line-height: $compose-filter-bar-height;
+    padding: 0px 25px 0px 10px;
 
     .compose {
       float: right;
@@ -27,8 +27,10 @@
   }
 
   .top-bar {
-    height: 30px;
-    line-height: 30px;
+    height: $compose-filter-bar-height;
+    line-height: $compose-filter-bar-height;
+    padding: 0px 25px 0px 10px;
+    background-color: #444;
 
     .title {
       float: left;
@@ -46,6 +48,27 @@
   }
 
   .composer {
-    height: 200px;
+    height: 300px;
+    width: 100%;
+    max-width: 650px;
+    margin: auto;
+    margin-top: 15px;
+
+    input, textarea { 
+      width: 90%;
+      font-size: 16px;
+      padding: 3px 5px;
+      border: none;
+      outline: none;
+      margin-bottom: 5px;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+
+    .send {
+      @include button-variant($primary-btn-color, $primary-btn-bg);
+      float: right;
+      margin-right: 5%;
+    }
   }
 }
