--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -6,6 +6,11 @@
     <div class="close">&times;</div>
   </div>
   <div class="composer">
+    <input class="class-input" type="text" placeholder="Class"></input>
+    <input class="instance-input" type="text" placeholder="Instance"></input>
+    <input class="recipient-input" type="text" placeholder="Recipient"></input>
+    <textarea rows="6" placeholder="Type your message here"></textarea>
+    <div class="btn send">Send</div>
   </div>
 {{else}}
   <div class="single-bar">
