--- a/app/templates/FilterBar.hbs
+++ b/app/templates/FilterBar.hbs
@@ -1,12 +1,12 @@
 <div class="top-bar">
   <div class="title">
-    {{!-- TODO: Make a handlebars helper! --}}
+    {{!-- TODO: Make a handlebars helper --}}
     All Messages
   </div>
   <div class="remove">&times;</div>
   <div class="filters">
     {{#if showFilters}}
-      <i class="fa fa-filter fa-rotate-180"></i>&nbsp;&nbsp;Hide Filters
+      <i class="fa fa-filter"></i>&nbsp;&nbsp;Hide Filters
     {{else}}
       <i class="fa fa-filter"></i>&nbsp;&nbsp;Show Filters
     {{/if}}
