--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -6,10 +6,10 @@
     <div class="close">&times;</div>
   </div>
   <div class="composer">
-    <input class="class-input" type="text" placeholder="Class"></input>
-    <input class="instance-input" type="text" placeholder="Instance"></input>
-    <input class="recipient-input" type="text" placeholder="Recipient"></input>
-    <textarea rows="6" placeholder="Type your message here"></textarea>
+    <input class="class-input" type="text" placeholder="Class" value="{{composeFields.class}}"></input>
+    <input class="instance-input" type="text" placeholder="Instance" value="{{composeFields.instance}}"></input>
+    <input class="recipient-input" type="text" placeholder="Recipient" value="{{composeFields.recipient}}"></input>
+    <textarea class="content-input" rows="6" placeholder="Type your message here">{{composeFields.content}}</textarea>
     <div class="btn send">Send</div>
   </div>
 {{else}}
