Colors on messages

--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -1,5 +1,6 @@
 <div class="header">
   <div class="msg-class">{{class}}</div>
+  <div class="divider"></div>
   <div class="msg-instance">{{instance}}</div>
   <span class="time from-now">{{prettyTime}}</span>
   <span class="time absolute">{{absoluteTime}}</span>
