--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -42,18 +42,16 @@
       padding-left: 5px;
       padding-right: 3px;
       box-sizing: border-box;
+      float: left;
+    }
 
-      &:after {
-        content: "";
-        border-left: 5px solid #BBB;
-        border-bottom: $msg-header-height solid transparent;
-        display: block;
-        width: 0;
-        height: 0;
-        position: absolute;
-        top: 0;
-        right: -5px;
-      }
+    .divider {
+      display: inline-block;
+      border-left: 5px solid #BBB;
+      border-bottom: $msg-header-height solid transparent;
+      width: 0;
+      height: 0;
+      float: left;
     }
 
     .msg-instance {
