--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -159,17 +159,15 @@
       position: relative;
       padding-left: 5px;
       padding-right: 3px;
-      box-sizing: border-box; }
-      .message-view .header .msg-class:after {
-        content: "";
-        border-left: 5px solid #BBB;
-        border-bottom: 25px solid transparent;
-        display: block;
-        width: 0;
-        height: 0;
-        position: absolute;
-        top: 0;
-        right: -5px; }
+      box-sizing: border-box;
+      float: left; }
+    .message-view .header .divider {
+      display: inline-block;
+      border-left: 5px solid #BBB;
+      border-bottom: 25px solid transparent;
+      width: 0;
+      height: 0;
+      float: left; }
     .message-view .header .msg-instance {
       display: inline-block;
       padding-left: 3px; }
