--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -10,9 +10,9 @@
     {{sender}}
   </div>
   <div class="message-block">
-    <div class="message">
+    <pre class="message">
       {{message}}
-    </div>
+    </pre>
     <div class="bottom-row">
       <div class="signature">
         {{signature}}
