--- a/app/sass/_compose.scss
+++ b/app/sass/_compose.scss
@@ -56,13 +56,14 @@
 
     input, textarea { 
       width: 90%;
-      font-size: 16px;
+      font-size: 14px;
       padding: 3px 5px;
       border: none;
       outline: none;
       margin-bottom: 5px;
       margin-left: 5%;
       margin-right: 5%;
+      font-family: monospace;
     }
 
     .send {
