--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -10,7 +10,10 @@
     <img class="gravatar" src="{{gravatar}}">
   </div>
   <div class="add-pane">
-    <i class="fa fa-plus"></i>&nbsp;New Pane
+    <i class="fa fa-plus"></i>&nbsp;&nbsp;New Pane
+  </div>
+  <div class="personal-message">
+    <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Personal Messages
   </div>
 {{else}}
   <div class="btn login">Login</div>
