--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -5,7 +5,6 @@
   width: 100%;
   background-color: #555;
   color: white;
-  padding: 0px 25px 0px 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-shadow: 0px 0px 5px black;
@@ -14,12 +13,45 @@
   .top-bar {
     height: $compose-filter-bar-height;
     line-height: $compose-filter-bar-height;
+    padding: 0px 25px 0px 10px;
 
     .title {
       float: left;
+
+      .msg-class {
+        background-color: #BBB;
+        display: inline-block;
+        position: relative;
+        padding-left: 5px;
+        padding-right: 3px;
+        box-sizing: border-box;
+        float: left;
+        margin-left: -10px;
+        padding-left: 10px;
+      }
+
+      .divider {
+        display: inline-block;
+        border-left: 5px solid #BBB;
+        border-bottom: $compose-filter-bar-height solid transparent;
+        width: 0;
+        height: 0;
+        float: left;
+      }
+
+      .msg-instance {
+        display: inline-block;
+        padding-left: 3px;
+      }
     }
 
     .filters {
+      float: right;
+      cursor: pointer;
+      margin-right: 15px;
+    }
+
+    .clear-filters {
       float: right;
       cursor: pointer;
       margin-right: 15px;
@@ -38,6 +70,28 @@
   }
 
   .filter-editor {
-    height: 200px;
+    height: 140px;
+    width: 100%;
+    max-width: 650px;
+    margin: auto;
+    margin-top: 15px;
+
+    input, textarea { 
+      width: 90%;
+      font-size: 14px;
+      padding: 3px 5px;
+      border: none;
+      outline: none;
+      margin-bottom: 5px;
+      margin-left: 5%;
+      margin-right: 5%;
+      font-family: monospace;
+    }
+
+    .set-filters {
+      @include button-variant($primary-btn-color, $primary-btn-bg);
+      float: right;
+      margin-right: 5%;
+    }
   }
 }
