--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,6 +77,10 @@
     float: right;
     margin-right: 25px;
     cursor: pointer; }
+  .navbar .personal-message {
+    float: right;
+    margin-right: 25px;
+    cursor: pointer; }
   .navbar .btn {
     color: #eeeeee;
     background-color: #3178d3;
@@ -115,11 +119,12 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     display: inline-block;
-    white-space: normal; }
+    white-space: normal;
+    padding-top: 30px; }
     .message-pane .message-pane-view:last-child {
       border: none; }
     .message-pane .message-pane-view .filler-view {
-      height: 60%; }
+      height: 70%; }
   .message-pane .no-panes {
     width: 100%;
     text-align: center;
@@ -297,17 +302,41 @@
   width: 100%;
   background-color: #555;
   color: white;
-  padding: 0px 25px 0px 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-shadow: 0px 0px 5px black;
   z-index: 10; }
   .filter-bar .top-bar {
     height: 30px;
-    line-height: 30px; }
+    line-height: 30px;
+    padding: 0px 25px 0px 10px; }
     .filter-bar .top-bar .title {
       float: left; }
+      .filter-bar .top-bar .title .msg-class {
+        background-color: #BBB;
+        display: inline-block;
+        position: relative;
+        padding-left: 5px;
+        padding-right: 3px;
+        box-sizing: border-box;
+        float: left;
+        margin-left: -10px;
+        padding-left: 10px; }
+      .filter-bar .top-bar .title .divider {
+        display: inline-block;
+        border-left: 5px solid #BBB;
+        border-bottom: 30px solid transparent;
+        width: 0;
+        height: 0;
+        float: left; }
+      .filter-bar .top-bar .title .msg-instance {
+        display: inline-block;
+        padding-left: 3px; }
     .filter-bar .top-bar .filters {
+      float: right;
+      cursor: pointer;
+      margin-right: 15px; }
+    .filter-bar .top-bar .clear-filters {
       float: right;
       cursor: pointer;
       margin-right: 15px; }
@@ -319,7 +348,36 @@
       .filter-bar .top-bar .remove:hover {
         color: #ff3333; }
   .filter-bar .filter-editor {
-    height: 200px; }
+    height: 140px;
+    width: 100%;
+    max-width: 650px;
+    margin: auto;
+    margin-top: 15px; }
+    .filter-bar .filter-editor input, .filter-bar .filter-editor textarea {
+      width: 90%;
+      font-size: 14px;
+      padding: 3px 5px;
+      border: none;
+      outline: none;
+      margin-bottom: 5px;
+      margin-left: 5%;
+      margin-right: 5%;
+      font-family: monospace; }
+    .filter-bar .filter-editor .set-filters {
+      color: #eeeeee;
+      background-color: #3178d3;
+      border-color: transparent;
+      float: right;
+      margin-right: 5%; }
+      .filter-bar .filter-editor .set-filters:hover, .filter-bar .filter-editor .set-filters:focus, .filter-bar .filter-editor .set-filters:active, .filter-bar .filter-editor .set-filters.active {
+        color: #eeeeee;
+        background-color: #2765b5; }
+      .open .filter-bar .filter-editor .set-filters.dropdown-toggle {
+        color: #eeeeee;
+        background-color: #2765b5;
+        background-image: none; }
+      .filter-bar .filter-editor .set-filters.disabled, .filter-bar .filter-editor .set-filters.disabled:hover, .filter-bar .filter-editor .set-filters.disabled:focus, .filter-bar .filter-editor .set-filters.disabled:active, .filter-bar .filter-editor .set-filters.disabled.active, .filter-bar .filter-editor .set-filters[disabled], .filter-bar .filter-editor .set-filters[disabled]:hover, .filter-bar .filter-editor .set-filters[disabled]:focus, .filter-bar .filter-editor .set-filters[disabled]:active, .filter-bar .filter-editor .set-filters[disabled].active, fieldset[disabled] .filter-bar .filter-editor .set-filters, fieldset[disabled] .filter-bar .filter-editor .set-filters:hover, fieldset[disabled] .filter-bar .filter-editor .set-filters:focus, fieldset[disabled] .filter-bar .filter-editor .set-filters:active, fieldset[disabled] .filter-bar .filter-editor .set-filters.active {
+        background-color: #3178d3 !important; }
 
 html, body {
   width: 100%;
