--- a/app/sass/_theme.scss
+++ b/app/sass/_theme.scss
@@ -1,9 +1,4 @@
-@font-face {
-  font-family: 'Krona One';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Krona One'), local('KronaOne-Regular'), url(https://themes.googleusercontent.com/static/fonts/kronaone/v2/ix3TbrGcGYAHLWi4hTTy1LO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
+$monospace-font: 'Inconsolata';
 
 $navbar-height: 50px;
 
