--- a/app/sass/_compose.scss
+++ b/app/sass/_compose.scss
@@ -63,7 +63,7 @@
       margin-bottom: 5px;
       margin-left: 5%;
       margin-right: 5%;
-      font-family: monospace;
+      font-family: $monospace-font;
     }
 
     .send {
