--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -61,7 +61,6 @@
       float: right;
       cursor: pointer;
       font-size: $compose-filter-bar-height;
-      margin-top: -2px;
 
       &:hover {
         color: lighten(red, 10%);
@@ -85,7 +84,7 @@
       margin-bottom: 5px;
       margin-left: 5%;
       margin-right: 5%;
-      font-family: monospace;
+      font-family: $monospace-font;
     }
 
     .set-filters {
