Gravatars and hotkey for making new panes

--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -70,12 +70,18 @@
       vertical-align: middle;
       padding: 0 5px;
       background-color: #EEE;
-      font-size: 14px;
+      font-size: 12px;
       position: relative;
       z-index: 2;
-      max-width: 90px;
       width: 90px;
+      min-width: 90px;
       box-sizing: border-box;
+      word-wrap: break-word;
+      font-weight: 700;
+
+      .gravatar {
+        border: 1px solid #BBB;
+      }
     }
 
     .message-block {
