--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -7,7 +7,8 @@
 </div>
 <div class="content">
   <div class="sender">
-    {{sender}}
+    <img class="gravatar" src="{{gravatar}}"><br>
+    {{shortSender}}
   </div>
   <div class="message-block">
     <pre class="message">
