--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -3,8 +3,13 @@
   max-width: 700px;
   margin: auto;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   border: 1px solid #BBB;
   border-top: none;
+
+  &.positioned {
+    border: 2px solid black;
+  }
 
   .header{
     box-sizing: border-box;
@@ -43,6 +48,11 @@
       padding-right: 3px;
       box-sizing: border-box;
       float: left;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
 
     .divider {
@@ -57,6 +67,11 @@
     .msg-instance {
       display: inline-block;
       padding-left: 3px;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
