--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -9,6 +9,12 @@
   -moz-box-sizing: border-box;
   box-shadow: 0px 0px 5px black;
   z-index: 10;
+  opacity: 0;
+  transition: opacity 0.2s;
+
+  &.selected {
+    opacity: 1 !important;
+  }
 
   .top-bar {
     height: $compose-filter-bar-height;
