Settings and cleanup
Added pane/keyboard settings, some comments, and cleaned up various areas.

--- a/app/sass/_navbar.scss
+++ b/app/sass/_navbar.scss
@@ -53,16 +53,10 @@
     }
   }
 
-  .add-pane {
+  .personal-message, .add-pane, .toggle-keyboard, .toggle-panes {
     float: right;
-    margin-right: 25px;
     cursor: pointer;
-  }
-
-  .personal-message {
-    float: right;
     margin-right: 25px;
-    cursor: pointer;
   }
 
   .btn {
