Smash the stupid filter jump bug

--- a/app/templates/FilterBar.hbs
+++ b/app/templates/FilterBar.hbs
@@ -22,7 +22,7 @@
   </div>
   {{#if filters.class_key}}
     <div class="clear-filters">
-      <i class="fa fa-ban"></i>&nbsp;&nbsp;Clear Filters
+      <i class="fa fa-ban"></i>&nbsp;&nbsp;Clear
     </div>
   {{/if}}
 </div>
