--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -432,6 +432,53 @@
       .filter-bar .filter-editor .set-filters.disabled, .filter-bar .filter-editor .set-filters.disabled:hover, .filter-bar .filter-editor .set-filters.disabled:focus, .filter-bar .filter-editor .set-filters.disabled:active, .filter-bar .filter-editor .set-filters.disabled.active, .filter-bar .filter-editor .set-filters[disabled], .filter-bar .filter-editor .set-filters[disabled]:hover, .filter-bar .filter-editor .set-filters[disabled]:focus, .filter-bar .filter-editor .set-filters[disabled]:active, .filter-bar .filter-editor .set-filters[disabled].active, fieldset[disabled] .filter-bar .filter-editor .set-filters, fieldset[disabled] .filter-bar .filter-editor .set-filters:hover, fieldset[disabled] .filter-bar .filter-editor .set-filters:focus, fieldset[disabled] .filter-bar .filter-editor .set-filters:active, fieldset[disabled] .filter-bar .filter-editor .set-filters.active {
         background-color: #3178d3 !important; }
 
+.modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: black;
+  z-index: 100;
+  opacity: 0.5; }
+
+.modal {
+  width: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  background-color: #555;
+  color: white;
+  z-index: 101; }
+  .modal .header {
+    position: relative;
+    height: 30px;
+    line-height: 12px;
+    background-color: #333; }
+    .modal .header .title {
+      padding: 10px;
+      font-size: 20px; }
+    .modal .header .close-help {
+      position: absolute;
+      right: 10px;
+      font-size: 30px;
+      top: 10px;
+      cursor: pointer; }
+      .modal .header .close-help:hover {
+        color: #ff3333; }
+  .modal .content {
+    padding: 10px;
+    width: 100%;
+    text-align: center; }
+    .modal .content th {
+      border: 1px solid white; }
+    .modal .content td {
+      border: 1px solid #BBB; }
+
 html, body {
   width: 100%;
   height: 100%;
