--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -14,6 +14,10 @@
       <th> Function </th>
     </tr>
     <tr>
+      <td> Alt+h </td>
+      <td> Toggle top bar </td>
+    </tr>
+    <tr>
       <td> Alt+n </td>
       <td> Open new pane </td>
     </tr>
@@ -48,6 +52,22 @@
     <tr>
       <td> Shift+c </td>
       <td> Show composer </td>
+    </tr>
+    <tr>
+      <td> Up/Down </td>
+      <td> Move message selection </td>
+    </tr>
+    <tr>
+      <td> r </td>
+      <td> Reply to selected message </td>
+    </tr>
+    <tr>
+      <td> q </td>
+      <td> Quote selected message </td>
+    </tr>
+    <tr>
+      <td> p </td>
+      <td> PM selected message sender </td>
     </tr>
     <tr>
       <td> ? </td>
