Outgoing sender box

--- a/app/sass/_theme.scss
+++ b/app/sass/_theme.scss
@@ -8,3 +8,5 @@ $primary-btn-color: #EEE;
 $msg-header-height: 25px;
 
 $compose-filter-bar-height: 30px;
+
+$outgoing-sender-color: rgb(214, 243, 214);
