--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -78,6 +78,12 @@
   .content {
     display: table-row;
 
+    &.outgoing {
+      .sender {
+        background-color: $outgoing-sender-color;
+      }
+    }
+
     .sender {
       text-align: center;
       height: 100%;
